
****  Fix // in filenames, bug1610. [Peter Nelson]

****  Fix $display("%p") to be closer to IEEE.

****  Fix labels on functions with returns, bug1614. [Mitch Hayenga]

****  Fix false unused message on __Vemumtab, msg3180. [Tobias Rosenkranz]

****  Fix assertion on dotted parameter arrayed function, bug1620. [Rich Porter]

****  Fix interface reference tracing, bug1595. [Todd Strader]


* Verilator 4.022 2019-11-10

**    Add --protect-lib, bug1490. [Todd Strader]

**    Add cmake support, bug1363. [Patrick Stewart]

***   Examples have been renamed.

***   Add --protect-ids to obscure information in objects, bug1521. [Todd Strader]

***   Add --trace-coverage.

***   Add --xml-output.

***   Support multithreading on Windows. [Patrick Stewart]

***   Suppress 'command failed' on normal errors.

***   Support some unpacked arrays in parameters, bug1315. [Marshal Qiao]

***   Add interface port visibility in traces, bug1594. [Todd Strader]

****  Increase case duplicate/incomplete to 16 bit tables, bug1545. [Yossi Nivin]

****  Support quoted arguments in -f files, bug1535. [Yves Mathieu]

****  Optimize modulus by power-of-two constants, and masked conditionals.

****  Fix detecting missing reg types, bug1570. [Jacko Dirks]

****  Fix multithreaded yield behavior when no work.  [Patrick Stewart]

****  Fix bad-syntax crashes, bug1548, bug1550-1553, bug1557-1560, bug1563,
      bug1573-1577, bug1579, bug1582-1591. [Eric Rippey]

****  Fix false CMPCONST/UNSIGNED warnings on "inside", bug1581. [Mitch Hayenga]


* Verilator 4.020 2019-10-06

***   Support $fseek, $ftell, $frewind, bug1496. [Howard Su]

***   Add --public-flat-rw, bug1511. [Stefan Wallentowitz]

***   Support vpiModule, bug1469. [Stefan Wallentowitz]

****  Make Syms file honor --output-split-cfuncs, bug1499. [Todd Strader]

****  Fix make test with no VERILATOR_ROOT, bug1494. [Ahmed El-Mahmoudy]

****  Fix error on multidimensional cells, bug1505. [Anderson Ignacio Da Silva]
