@@ -1,3 +1,7 @@
+%Error: t/t_queue_unsup_bad.v:20: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {"q", "b", "c", "d", "e", "f"};
+          ^
 %Error: t/t_queue_unsup_bad.v:23: Unsupported: Queue .delete(index) method, as is O(n) complexity and slow.
                                 : ... In instance t
       q.delete(1);
@@ -10,6 +14,26 @@
                                 : ... In instance t
       q.insert(2, "ins2");
         ^~~~~~
+%Error: t/t_queue_unsup_bad.v:33: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {q, "f1"};   
+          ^
+%Error: t/t_queue_unsup_bad.v:34: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {q, "f2"};   
+          ^
+%Error: t/t_queue_unsup_bad.v:35: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {"b1", q};   
+          ^
+%Error: t/t_queue_unsup_bad.v:36: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {"b2", q};   
+          ^
+%Error: t/t_queue_unsup_bad.v:37: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+      q = {q[0], q[2:$]};   
+          ^
 %Error: t/t_queue_unsup_bad.v:37: Unsupported/illegal unbounded ('$') in this context.
                                 : ... In instance t
       q = {q[0], q[2:$]};   
@@ -26,8 +50,16 @@
                                 : ... In instance t
       q = {q[0], q[2:$]};   
                   ^
+%Error: t/t_queue_unsup_bad.v:41: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+         string ai[$] = { "Foo", "Bar" };
+                        ^
 %Error: t/t_queue_unsup_bad.v:46: Unsupported: Assignment pattern applies against non struct/union: QUEUEDTYPE
                                 : ... In instance t
          q = '{ "BB", "CC" };   
              ^~
+%Error: t/t_queue_unsup_bad.v:49: Unsupported: Replication to form QUEUEDTYPE
+                                : ... In instance t
+         q = { "BB", "CC" };   
+             ^
 %Error: Exiting due to
